Junção do projeto service com o web via maven, melhoria na i18n e ajustes na autenticação